# dxdy_pro

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.toml  ui_settings.toml
src/: app.py  control_panel.py  ganglion.toml  help_database.md  help_user_guide.md  rtd_server.py  scheduler.py  serve.py
src/dxdy/: __init__.py  ducklog.py  dx_edgar.py  saas_settings.py  settings.py
src/dxdy/ai/: gpt.py  sql_programmer.py
src/dxdy/bbg/: api.py
src/dxdy/db/: market_data.py  reference_data.py  schema.py  utils.py  views.py
src/dxdy/email/: reports.py
src/dxdy/eod/: tasks.py
src/dxdy/quant/: ai.py  api.py  sde_rng.py
src/dxdy/rtd/: rtd_calcs.py
src/dxdy/tui/: ai_screen.py  custom_header.py  dashboard_screen.py  db_screen.py  dxdy_app.py  dxdy_app.tcss  help_screen.py  log_screen.py  query_screen.py  reports_screen.py  risk_screen.py  splash_screen.py  ticket_screen.py  tui_utils.py
src/dxdy/yf/: api.py
